--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.android.support:percent:24.2.1'
     testCompile 'junit:junit:4.12'
 }
